# portfolio

./: .dockerignore  .env-example  .env.example  .gitignore  .pre-commit-config.yaml  .rumdl.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.cjs  todo.md  usercustomize.py
.agent/rules/: code-style-guide.md
.github/: copilot-instructions.md
.github/prompts/: plan-portfolioRefactor.prompt.md
.github/workflows/: ci.yml  docker-publish.yml
app/: admin_views.py  app.py  catalog.py  config.py  db.py  dependencies.py  jx_catalog.py  log_events.py  logger.py  main.py  metrics.py  render.py  schemas.py  security.py  seed.py  telemetry.py  views.py
app/api/: __init__.py  about.py  analytics.py  auth.py  blog.py  contact.py  health.py  home.py  projects.py  router.py
app/core/: config.py  dependencies.py  deps.py  logger.py  rendering.py  security.py  telemetry.py  telemetry_exporter.py  utils.py
app/domain/: models.py  schemas.py
app/infrastructure/: markdown.py
app/middleware/: analytics.py  security.py
app/models/: __init__.py  analytics.py  comment.py  profile.py  user.py
app/observability/: analytics.py  bootstrap.py  events.py  metrics.py  telemetry.py
backend/: package.json  pyproject.toml
content/: about.md
docker/: Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml
docs/: README.md  architecture.md  backend.md  design-system.md  figma-tokens.md  frontend.md  infrastructure.md  observability.md  security.md
frontend/: package.json  tailwind.config.js
infra/: README.md
plan/: checklist-completo.md  frontend-docs.md  guia-executivo.md  mapa-docs.md  notion-integration-updated.md
tests/: conftest.py  test_about_markdown_parsing.py  test_contact_submission_service.py  test_markdown_gist_loading.py  test_markdown_sanitization.py  test_page_rendering_snapshots.py  test_profile.py  test_routes_api_coverage.py  test_routes_integration.py  test_security_csrf.py  test_security_owasp.py  test_seo_service.py  test_telemetry.py
(+293 files in other folders)
