[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.3.0",
    "fastapi>=0.132.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "jx>=0.8.0",
    "markdown>=3.9",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-exporter-otlp>=1.38.0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "opentelemetry-instrumentation-httpx>=0.59b0",
    "opentelemetry-sdk>=1.38.0",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pygments>=2.19.2",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "slowapi>=0.1.9",
    "uvicorn>=0.41.0",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
    "rumdl>=0.1.26",
    "taskipy>=1.14.1",
    "ty>=0.0.18",
]
